2019-06-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Stay true to linked lists.

	* graph/grinit.c (grInitDevices, grDoneDevices): Properly walk and
	delete entries from the linked list `gr_device_chain'.
	* graph/grdevice.c (find_device): Ditto.
	* graph/grdevice.h (gr_num_devices, gr_max_devices): Removed.
	* graph/grconfig.h (GR_MAX_DEVICES): Ditto.

2019-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Implement PNG printing.

	* src/ftcommon.[hc] (FT_Display_Print): New function.
	* src/{ftgrid,ftview,ftstring}.c (Process_Event): New event.

	* Makefile: Compile with appropriate <ftoption.h> so that
	FT_CONFIG_OPTION_USE_PNG status is inherited from the library build
	and based on the libPNG avalability.

2019-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Consolidate versioning.

	* src/ftcommon.[ch] (FTDemo_Version): New function.
	* src/{ftgrid,ftview,ftstring}.c (parse_cmdline, event_help): Use it.

2019-05-24  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add option `-d' to select variation font instance.

	* src/ttdebug.c: Include `ctype.h'.
	(requested_pos, requested_cnt): New global variables.
	(parse_design_coords): New auxiliary function.
	(Usage): Updated.
	(main): Handle option`-d'.

	* src/ttdebug.1: Updated.

2019-05-22  Werner Lemberg  <wl@gnu.org>

	[ttdebug] New key `O' to show opcode help string.

	Also add key `H' to show help on the formatting of data.

	* src/ttdebug.c (OpStrDoc): New global array.
	(RunIns) <'h'>: Move help on format of value changes to...
	<'H'>: ... this key.  Also describe format of opcode syntax.
	<'O'>: Show opcode help string.

2019-05-22  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add support for GETVARIATION and GETDATA opcodes.

	* src/ttdebug.c: Include FT_MULTIPLE_MASTERS_H.
	(multimaster): New global variable.
	(OpStr): Updated.
	(main): Call `FT_Get_MM_Var' to initialize MM support.

2019-05-22  Werner Lemberg  <wl@gnu.org>
